docs/envoy/v1.32.8/_sources/intro/arch_overview/security/external_dep_api.rst.txt
External dependencies: ``api``
==============================

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `bazel-skylib <https://github.com/bazelbuild/bazel-skylib>`__, `1.7.1 <https://github.com/bazelbuild/bazel-skylib/releases/tag/1.7.1>`__, 2024-06-03, , `Apache-2.0 <https://github.com/bazelbuild/bazel-skylib/blob/1.7.1/LICENSE>`__
  `buf <https://buf.build>`__, `1.42.0 <https://github.com/bufbuild/buf/releases/tag/v1.42.0>`__, 2024-09-18, , `Apache-2.0 <https://github.com/bufbuild/buf/blob/v1.42.0/LICENSE>`__
  `CEL <https://github.com/google/cel-spec>`__, `0.16.2 <https://github.com/google/cel-spec/releases/tag/v0.16.2>`__, 2024-09-18, , 
  `Go rules for Bazel <https://github.com/bazelbuild/rules_go>`__, `0.49.0 <https://github.com/bazelbuild/rules_go/releases/tag/v0.49.0>`__, 2024-07-13, , `Apache-2.0 <https://github.com/bazelbuild/rules_go/blob/v0.49.0/LICENSE.txt>`__
  `Google APIs <https://github.com/googleapis/googleapis>`__, `fd52b57 <https://github.com/googleapis/googleapis/tree/fd52b5754b2b268bc3a22a10f29844f206abb327>`__, 2024-09-16, , `Apache-2.0 <https://github.com/googleapis/googleapis/blob/fd52b5754b2b268bc3a22a10f29844f206abb327/LICENSE>`__
  `OpenCensus Proto <https://github.com/census-instrumentation/opencensus-proto>`__, `0.4.1 <https://github.com/census-instrumentation/opencensus-proto/releases/tag/v0.4.1>`__, 2022-09-23, , `Apache-2.0 <https://github.com/census-instrumentation/opencensus-proto/blob/v0.4.1/LICENSE>`__
  `OpenTelemetry Proto <https://github.com/open-telemetry/opentelemetry-proto>`__, `1.3.2 <https://github.com/open-telemetry/opentelemetry-proto/releases/tag/v1.3.2>`__, 2024-06-28, , `Apache-2.0 <https://github.com/open-telemetry/opentelemetry-proto/blob/v1.3.2/LICENSE>`__
  `Prometheus client model <https://github.com/prometheus/client_model>`__, `0.6.1 <https://github.com/prometheus/client_model/releases/tag/v0.6.1>`__, 2024-04-03, , `Apache-2.0 <https://github.com/prometheus/client_model/blob/v0.6.1/LICENSE>`__
  `Protobuf Rules for Bazel <https://github.com/bazelbuild/rules_proto>`__, `6.0.2 <https://github.com/bazelbuild/rules_proto/releases/tag/6.0.2>`__, 2024-06-17, , `Apache-2.0 <https://github.com/bazelbuild/rules_proto/blob/6.0.2/LICENSE>`__
  `protoc-gen-validate (PGV) <https://github.com/bufbuild/protoc-gen-validate>`__, `1.0.4 <https://github.com/bufbuild/protoc-gen-validate/releases/tag/v1.0.4>`__, 2024-01-17, , `Apache-2.0 <https://github.com/bufbuild/protoc-gen-validate/blob/v1.0.4/LICENSE>`__
  `xDS API <https://github.com/cncf/xds>`__, `b4127c9 <https://github.com/cncf/xds/tree/b4127c9b8d78b77423fd25169f05b7476b6ea932>`__, 2024-09-05, , `Apache-2.0 <https://github.com/cncf/xds/blob/b4127c9b8d78b77423fd25169f05b7476b6ea932/LICENSE>`__
  `Zipkin API <https://github.com/openzipkin/zipkin-api>`__, `1.0.0 <https://github.com/openzipkin/zipkin-api/releases/tag/1.0.0>`__, 2020-11-22, , `Apache-2.0 <https://github.com/openzipkin/zipkin-api/blob/1.0.0/LICENSE>`__

