docs/envoy/v1.35.10/_sources/intro/arch_overview/security/external_dep_api.rst.txt
External dependencies: ``api``
==============================

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Bazel rules for Buf <https://github.com/bufbuild/rules_buf>`__, `0.4.0 <https://github.com/bufbuild/rules_buf/releases/tag/v0.4.0>`__, 2025-05-07, , `Apache-2.0 <https://github.com/bufbuild/rules_buf/blob/0.4.0/LICENSE>`__
  `bazel-skylib <https://github.com/bazelbuild/bazel-skylib>`__, `1.7.1 <https://github.com/bazelbuild/bazel-skylib/releases/tag/1.7.1>`__, 2024-06-03, , `Apache-2.0 <https://github.com/bazelbuild/bazel-skylib/blob/1.7.1/LICENSE>`__
  `CEL <https://github.com/google/cel-spec>`__, `0.24.0 <https://github.com/google/cel-spec/releases/tag/v0.24.0>`__, 2025-05-09, , `Apache-2.0 <https://github.com/google/cel-spec/blob/v0.24.0/LICENSE>`__
  `Go rules for Bazel <https://github.com/bazelbuild/rules_go>`__, `0.53.0 <https://github.com/bazelbuild/rules_go/releases/tag/v0.53.0>`__, 2025-02-11, , `Apache-2.0 <https://github.com/bazelbuild/rules_go/blob/v0.53.0/LICENSE.txt>`__
  `Google APIs <https://github.com/googleapis/googleapis>`__, `fd52b57 <https://github.com/googleapis/googleapis/tree/fd52b5754b2b268bc3a22a10f29844f206abb327>`__, 2024-09-16, , `Apache-2.0 <https://github.com/googleapis/googleapis/blob/fd52b5754b2b268bc3a22a10f29844f206abb327/LICENSE>`__
  `OpenTelemetry Proto <https://github.com/open-telemetry/opentelemetry-proto>`__, `1.7.0 <https://github.com/open-telemetry/opentelemetry-proto/releases/tag/v1.7.0>`__, 2025-05-21, , `Apache-2.0 <https://github.com/open-telemetry/opentelemetry-proto/blob/v1.7.0/LICENSE>`__
  `Prometheus client model <https://github.com/prometheus/client_model>`__, `0.6.2 <https://github.com/prometheus/client_model/releases/tag/v0.6.2>`__, 2025-04-11, , `Apache-2.0 <https://github.com/prometheus/client_model/blob/v0.6.2/LICENSE>`__
  `Protobuf Rules for Bazel <https://github.com/bazelbuild/rules_proto>`__, `7.1.0 <https://github.com/bazelbuild/rules_proto/releases/tag/7.1.0>`__, 2024-12-18, , `Apache-2.0 <https://github.com/bazelbuild/rules_proto/blob/7.1.0/LICENSE>`__
  `protoc-gen-validate (PGV) <https://github.com/bufbuild/protoc-gen-validate>`__, `1.0.4 <https://github.com/bufbuild/protoc-gen-validate/releases/tag/v1.0.4>`__, 2024-01-17, , `Apache-2.0 <https://github.com/bufbuild/protoc-gen-validate/blob/v1.0.4/LICENSE>`__
  `xDS API <https://github.com/cncf/xds>`__, `2ac532f <https://github.com/cncf/xds/tree/2ac532fd44436293585084f8d94c6bdb17835af0>`__, 2025-05-01, , `Apache-2.0 <https://github.com/cncf/xds/blob/2ac532fd44436293585084f8d94c6bdb17835af0/LICENSE>`__
  `Zipkin API <https://github.com/openzipkin/zipkin-api>`__, `1.0.0 <https://github.com/openzipkin/zipkin-api/releases/tag/1.0.0>`__, 2020-11-22, , `Apache-2.0 <https://github.com/openzipkin/zipkin-api/blob/1.0.0/LICENSE>`__

